--- a/index.html
+++ b/index.html
@@ -379,14 +379,14 @@
                     <hr>
 
 
-                    <div class="flex justify-between ">
+                    <div class="flex mt-3 justify-between ">
                         <p>C2</p>
                         <p>Economoy</p>
                         <p>550</p>
                     </div>
 
 
-                    <div class="flex justify-between ">
+                    <div class="flex mt-3 justify-between ">
                         <p>C2</p>
                         <p>Economoy</p>
                         <p>550</p>
@@ -394,10 +394,22 @@
                     <hr>
 
                     <!-- total price  -->
-                    <div class="flex justify-between text-xl">
+                    <div class="flex justify-between mt-3 text-xl">
                         <p>Total price</p>
                         <p>BDT: <span>1100</span></p>
 
+                    </div>
+
+                    <div class="mt-4">
+                        <div class="join">
+                            <input class="input w-[490px] input-bordered join-item" placeholder="Have any copupon"/>
+                            <button class="btn bg-green-500 w-[100px] text-xl text-white  ">Apply</button>
+                          </div>
+                    </div>
+
+                    <div class="flex justify-between text-xl mt-2">
+                        <p>Grand Total</p>
+                        <p>BDT <span>1100</span></p>
                     </div>
 
                 </div>
