banner section problem solve

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                         <span class="text-[#1DD100]"> P Paribahan</span>
                     </h1>
                     <p class="mb-5">"Experience PH Bus Paribohon: Reliable, Safe, and Comfortable Transportation.
-                        Connecting Communities with Seamless Service. Book Now for Your Hassle-Free Journey!"</p>
-                    <button onclick="buyTicket()" class="btn font-bold text-xl text-[#030708] bg-[#1DD100] rounded-xl border-none">Buy
+                        Connecting Communities with Seamless Service. <br> Book Now for  Your Hassle-Free Journey!"</p>
+                    <button onclick="buyTicket()" class="btn font-bold text-xl text-[#030708] bg-[#1DD100] rounded-xl border-none text-white">Buy
                         Tickets</button>
                 </div>
             </div>
@@ -331,7 +331,7 @@
                             <label class="input input-bordered flex items-center justify-between gap-2 mt-5">
                                 <input type="text" class="grow" placeholder="Have any coupon?" />
                                 <button
-                                    class="btn text-white text-lg font-semibold bg-[#1DD100] rounded-lg ">Apply</button>
+                                    class="btn text-white text-lg font-semibold bg-[#1DD100] rounded-xl ">Apply</button>
                             </label>
 
                             <div class="flex justify-between my-5 ">
