discound part addd

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
             <!-- seats -->
 
-            <div id="motherDiv" class="bg-white rounded-3xl	mt-6 lg:gap-[300px]  flex lg:flex-row md:flex-row flex-col">
+            <div id="motherDiv" class="bg-white rounded-3xl	mt-6 gap-[200px]  flex lg:flex-row md:flex-row flex-col">
 
                 <div id="left-unit" class="p-8 ">
 
