footer section some problem fixed

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 </head>
 
-<body class="container mx-auto">
+<body class="">
 
-    <header>
+    <header class="container mx-auto">
 
         <!-- navbar start -->
         <div class="navbar bg-base-100  lg:mb-8 md:mb-6 mb-4">
@@ -86,7 +86,7 @@
 
     </header>
 
-    <main>
+    <main class="container mx-auto">
 
         <!-- cupon section start -->
 
