--- a/index.html
+++ b/index.html
@@ -383,8 +383,8 @@
 
                         </div>
                         <div>
-                            <p>GET IT NO</p>
-                            <p class="text-3xl">Google Play</p>
+                            <p class="lg:text-[20px] text-[10px]">GET IT NO</p>
+                            <p class=" lg:text-3xl">Google Play</p>
 
                         </div>
                      </div>
@@ -393,14 +393,15 @@
             </div> <br> <br>
             <hr>
 
-            <div class="flex justify-between mt-11">
-                <div>
-                    <p>@all rights reserved, P-Ticket services limited.2024</p>
+            <div class="lg:flex justify-between mt-11">
+                <div class="">
+                    <p class="lg:text-[20px] text-[15px]  ">@all rights reserved, P-Ticket services limited.2024</p>
                 </div>
-                <div class="flex gap-11">
+                <div class="lg:flex text-center  gap-11">
                     <p>Terms & condition </p>
                     <p>Return & refund policy</p>
                     <p>Privacy policy</p>
+                
                 </div>
             </div>
 
