--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
         <!-- P.H Paribahan section start -->
 
-        <section id="ph"  class="bg-[#F7F8F8]">
+        <section id="paribahan"  class="bg-[#F7F8F8]">
 
             <h1 class="text-center text-[#030712] text-4xl font-bold mb-6">P.H Paribahan</h1>
             <p class="text-center text-lg font-normal text-[#030712] text-opacity-75 lg:mb-12 md:mb-9 mb-7">Yes, you can
@@ -227,7 +227,7 @@
 
             <!-- seats -->
 
-            <div id="motherDiv" class="bg-white rounded-3xl	mt-6 gap-[200px]  flex lg:flex-row md:flex-row flex-col">
+            <div id="buyTicket" class="bg-white rounded-3xl	mt-6 gap-[200px]  flex lg:flex-row md:flex-row flex-col">
 
                 <div id="left-unit" class="p-8 ">
 
@@ -416,7 +416,7 @@
     </footer>
 
 
-
+    <script src="script/script.js"></script>
 </body>
 
 </html>
