navbar jr ticket bd added

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                     </ul>
                 </div>
-                <a class="btn btn-ghost text-3xl font-extrabold">P-Ticket</a>
+                <a class="btn btn-ghost text-3xl font-extrabold">JR-Ticket-BD</a>
             </div>
             <div class="navbar-center hidden lg:flex">
                 <ul class="menu menu-horizontal px-1">
