--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                     </ul>
                 </div>
-                <a class="btn btn-ghost text-3xl font-extrabold">JR-Ticket-BD</a>
+                <a class="btn btn-ghost text-3xl font-extrabold">P-Ticket</a>
             </div>
             <div class="navbar-center hidden lg:flex">
                 <ul class="menu menu-horizontal px-1">
@@ -130,7 +130,7 @@
 
         <!-- P.H Paribahan section start -->
 
-        <section id="ph" class="bg-[#F7F8F8]">
+        <section id="paribahan" class="bg-[#F7F8F8]">
 
             <h1 class="text-center text-[#030712] text-4xl font-bold mb-6">P.H Paribahan</h1>
             <p class="text-center text-lg font-normal text-[#030712] text-opacity-75 lg:mb-12 md:mb-9 mb-7">Yes, you can
@@ -162,7 +162,7 @@
 
                             <button class="btn">
                                 <img src="images/seat-green.png" alt="">
-                                <p class="text-lg font-medium text-[#1DD100]"><span id="left-seats">8</span> Seats left
+                                <p class="text-lg font-medium text-[#1DD100]"><span id="left-seats">40</span> Seats left
                                 </p>
                             </button>
                         </div>
@@ -228,7 +228,7 @@
 
             <!-- seats -->
 
-            <div id="motherDiv" class="bg-white rounded-3xl	mt-6  flex lg:flex-row md:flex-row flex-col">
+            <div id="motherDiv" class="bg-white rounded-3xl	mt-6  flex lg:flex-row md:flex-row flex-col items-center">
 
                 <div id="left-unit" class="p-8 ">
 
@@ -291,6 +291,129 @@
                         <button id="B4"
                             class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50 ">B4</button>
                     </div>
+                    <!-- C section -->
+                    <div class="flex items-center justify-between mb-6">
+                        <h2 class="text-2xl font-medium text-[#030712] text-opacity-50">C</h2>
+                        <button id="C1"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50  ">C1</button>
+
+                        <button id="C2"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50  lg:mr-20 ">C2</button>
+
+                        <button id="C3"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50  lg:ml-20 ">C3</button>
+
+                        <button id="C4"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50 ">C4</button>
+                    </div>
+
+                    <!-- D section -->
+                    <div class="flex items-center justify-between mb-6">
+                        <h2 class="text-2xl font-medium text-[#030712] text-opacity-50">D</h2>
+                        <button id="D1"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50  ">D1</button>
+
+                        <button id="D2"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50  lg:mr-20 ">D2</button>
+
+                        <button id="D3"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50  lg:ml-20 ">D3</button>
+
+                        <button id="D4"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50 ">D4</button>
+                    </div>
+
+                    <!-- E section -->
+                    <div class="flex items-center justify-between mb-6">
+                        <h2 class="text-2xl font-medium text-[#030712] text-opacity-50">E</h2>
+                        <button id="E1"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50  ">E1</button>
+
+                        <button id="E2"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50  lg:mr-20 ">E2</button>
+
+                        <button id="E3"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50  lg:ml-20 ">E3</button>
+
+                        <button id="E4"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50 ">E4</button>
+                    </div>
+                    <!-- F section -->
+                    <div class="flex items-center justify-between mb-6">
+                        <h2 class="text-2xl font-medium text-[#030712] text-opacity-50">F</h2>
+                        <button id="F1"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50  ">F1</button>
+
+                        <button id="F2"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50  lg:mr-20 ">F2</button>
+
+                        <button id="F3"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50  lg:ml-20 ">F3</button>
+
+                        <button id="F4"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50 ">F4</button>
+                    </div>
+                    <!-- G section -->
+                    <div class="flex items-center justify-between mb-6">
+                        <h2 class="text-2xl font-medium text-[#030712] text-opacity-50">G</h2>
+                        <button id="G1"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50  ">G1</button>
+
+                        <button id="G2"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50  lg:mr-20 ">G2</button>
+
+                        <button id="G3"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50  lg:ml-20 ">G3</button>
+
+                        <button id="G4"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50 ">G4</button>
+                    </div>
+
+                    <!-- H section -->
+                    <div class="flex items-center justify-between mb-6">
+                        <h2 class="text-2xl font-medium text-[#030712] text-opacity-50">H</h2>
+                        <button id="H1"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50  ">H1</button>
+
+                        <button id="H2"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50  lg:mr-20 ">H2</button>
+
+                        <button id="H3"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50  lg:ml-20 ">H3</button>
+
+                        <button id="H4"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50 ">H4</button>
+                    </div>
+                    <!-- I section -->
+                    <div class="flex items-center justify-between mb-6">
+                        <h2 class="text-2xl font-medium text-[#030712] text-opacity-50">I</h2>
+                        <button id="I1"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50  ">I1</button>
+
+                        <button id="I2"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50  lg:mr-20 ">I2</button>
+
+                        <button id="I3"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50  lg:ml-20 ">I3</button>
+
+                        <button id="I4"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50 ">I4</button>
+                    </div>
+                    <!-- J section -->
+                    <div class="flex items-center justify-between mb-6">
+                        <h2 class="text-2xl font-medium text-[#030712] text-opacity-50">J</h2>
+                        <button id="J1"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50  ">J1</button>
+
+                        <button id="J2"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50  lg:mr-20 ">J2</button>
+
+                        <button id="J3"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50  lg:ml-20 ">J3</button>
+
+                        <button id="J4"
+                            class=" seat text-2xl btn font-medium text-[#030712] text-opacity-50 ">J4</button>
+                    </div>
 
 
 
@@ -337,7 +460,9 @@
 
                             <!-- cuppon input field -->
 
-                            <label id="input-and-button" class=" input input-bordered flex items-center justify-between gap-2 mt-5">
+                            <div>
+                                <label id="input-and-button"
+                                class=" input input-bordered flex items-center justify-between gap-2 mt-5">
                                 <input id="input-Cupon" type="text" class="grow" placeholder="Have any coupon?" />
                                 <button onclick="applyCupon()" id="cuppon-apply"
                                     class="btn text-white text-lg font-semibold bg-[#1DD100] rounded-lg ">Apply</button>
@@ -347,10 +472,74 @@
                                 <h2 class="text-lg font-medium">Grand Total</h2>
                                 <h2 class="text-lg font-medium">BDT <span id="grand-total">0000</span></h2>
                             </div>
+                            </div>
 
-                            <button
-                                class="btn w-full text-2xl font-extrabold text-white bg-[#1DD100] rounded-2xl	mb-5">Next</button>
-                            <div class="flex justify-between items-center">
+                            <!-- form start -->
+                           <div>
+                            <label class="form-control w-full">
+                                <div class="label">
+                                    <span class="label-text text-[#030712] text-lg font-semibold mb-4">Passenger
+                                        Name*</span>
+                                </div>
+                                <input type="text" placeholder="Enter your name "
+                                    class="input input-bordered w-full text-lg mb-6" />
+                            </label>
+                            <label class="form-control w-full">
+                                <div class="label">
+                                    <span class="label-text text-[#030712] text-lg font-semibold mb-4">Phone Number*</span>
+                                </div>
+                                <input type="number" placeholder="Enter your phone number"
+                                    class="input input-bordered w-full text-lg mb-6" />
+                            </label>
+                            <div class="juyel">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste ut repudiandae itaque culpa dolor molestiae</div>
+                            <label class="form-control w-full">
+                                <div class="label">
+                                    <span class="label-text text-[#030712] text-lg font-semibold mb-4">Email ID</span>
+                                </div>
+                                <input type="email" placeholder="Enter your email id"
+                                    class="input input-bordered w-full text-lg mb-6" />
+                            </label>
+                           </div>
+
+                            <!-- form end -->
+
+
+
+                            <!-- modal section  -->
+                            <div class="hidden">
+                                <button class="btn w-full text-2xl font-extrabold text-white bg-[#1DD100] rounded-2xl	mb-5"
+                                onclick="my_modal_5.showModal()">Next</button>
+                            <dialog id="my_modal_5" class="modal modal-bottom rounded-xl sm:modal-middle ">
+
+                                <div class="modal-box">
+                                    <div class="flex justify-center">
+                                        <img src="images/success.png" alt="">
+                                    </div>
+                                    <h3 class="font-bold text-2xl text-[#27AE60] text-center mt-8 mb-8">SUCCESS</h3>
+                                    <p class="text-center text-xl font-medium mb-4 p-2">Thank you for Booking Our Bus
+                                        Seats. <br>
+                                        We are working hard to find the best service and deals for you.</p>
+                                    <p class="text-xl text-[#4A4A4A] font-light text-center p-2 mb-4">Shortly you will
+                                        find a confirmation in your email.</p>
+
+                                    <div class="flex justify-center">
+
+
+                                        <div class="modal-action">
+                                            <form>
+
+                                                <button onclick="window.location.reload()"
+                                                    class="btn  text-xl text-white font-semibold bg-[#27AE60] hover:bg-[#27AE60] active:bg-[#27AE60] focus:outline-none focus:ring focus:bg-[#27AE60] ">Continue</button>
+                                            </form>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </dialog>
+                            </div>
+
+                            <!-- modal section end -->
+                            <div class="flex gap-11 justify-between items-center">
                                 <p class="text-lg text-[#030712] text-opacity-60 underline">Terms and Conditions</p>
                                 <p class="text-lg text-[#030712] text-opacity-60 underline">Cancellation Policy</p>
                             </div>
