--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
             <div id="motherDiv" class="bg-white rounded-3xl	mt-6  flex lg:flex-row md:flex-row flex-col items-center">
 
-                <div id="left-unit" class="p-8 ">
+                <div id="left-unit" class="lg:flex-1 p-8 ">
 
                     <h1 class="text-[#030712] text-2xl font-semibold mb-6">Select Your Seat</h1>
                     <img src="images/Line1.png" alt="" class="w-full">
@@ -427,7 +427,7 @@
 
                 <!-- payment -->
 
-                <div>
+                <div class="lg:flex-1">
 
                     <div>
                         <h2 class="text-3xl font-semibold text-[#030712] mb-5 lg:text-left md:text-left text-center">
@@ -461,12 +461,24 @@
                             <!-- cuppon input field -->
 
                             <div>
-                                <label id="input-and-button"
+                                <!-- <label id="input-and-button"
                                 class=" input input-bordered flex items-center justify-between gap-2 mt-5">
                                 <input id="input-Cupon" type="text" class="grow" placeholder="Have any coupon?" />
                                 <button onclick="applyCupon()" id="cuppon-apply"
-                                    class="btn text-white text-lg font-semibold bg-[#1DD100] rounded-lg ">Apply</button>
-                            </label>
+                                    class="btn text-white text-lg font-semibold bg-[#1DD100] w-[100px] rounded-lg ">Apply</button>
+                            </label> -->
+
+
+
+
+                            <div class="join ">
+                                <input class="input input-bordered join-item" placeholder="text"/>
+                                <button class="btn join-item bg-green-500 text-white rounded-r-full">Apply</button>
+                              </div>
+
+
+
+
 
                             <div class="flex justify-between my-5 ">
                                 <h2 class="text-lg font-medium">Grand Total</h2>
@@ -491,7 +503,7 @@
                                 <input type="number" placeholder="Enter your phone number"
                                     class="input input-bordered w-full text-lg mb-6" />
                             </label>
-                            <div class="juyel">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste ut repudiandae itaque culpa dolor molestiae</div>
+                            
                             <label class="form-control w-full">
                                 <div class="label">
                                     <span class="label-text text-[#030712] text-lg font-semibold mb-4">Email ID</span>
