--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                     </ul>
                 </div>
-                <a class="btn btn-ghost text-3xl font-extrabold">P-Ticket</a>
+                <a class="btn btn-ghost lg:text-3xl  text-xl font-extrabold">JR-Ticket-BD</a>
             </div>
             <div class="navbar-center hidden lg:flex">
                 <ul class="menu menu-horizontal px-1">
@@ -72,7 +72,7 @@
                         <span class="text-[#1DD100]"> P Paribahan</span>
                     </h1>
                     <p class="mb-5">"Experience PH Bus Paribohon: Reliable, Safe, and Comfortable Transportation.
-                        Connecting Communities with Seamless Service. Book Now for Your Hassle-Free Journey!"</p>
+                        Connecting Communities with Seamless Service.  <br> Book Now for Your Hassle-Free Journey!"</p>
                     <button onclick="buyTicket()"
                         class="btn font-bold text-xl text-[#030708] bg-[#1DD100] rounded-xl border-none">Buy
                         Tickets</button>
@@ -90,7 +90,7 @@
 
         <!-- cupon section start -->
 
-        <section class="mt-10 lg:mb-15 md:mb-12 mb-10">
+        <!-- <section class="mt-10 lg:mb-15 md:mb-12 mb-10">
             <h1 class="text-[#030712] text-4xl font-bold mb-6 text-center">Best offers for you</h1>
             <div class=" flex flex-col lg:flex-row gap-10">
                 <div class="offer-card border-2 h-56 lg:w-[750px] rounded-3xl bg-[#FFBF0F] flex ">
@@ -124,7 +124,68 @@
                     class="btn rounded-xl border-green-500 bg-white text-[#1DD100] text-xl font-bold font-raleway ">See
                     All Offers</button>
             </div>
-        </section>
+        </section> -->
+
+
+
+
+        <section class="mt-10 lg:mb-15 md:mb-12 mb-10">
+            <h1 class="text-[#030712] text-4xl font-bold text-center mb-10">Best offers for you</h1>
+
+            <!-- cupon cards start -->
+            <div
+                class="flex lg:flex-row md:flex-col flex-col  lg:justify-around lg:items-center lg:gap-15 md:gap-10 gap-8">
+                <div class="flex lg:flex-row md:flex-row flex-col  lg:bg-[#FFBF0F] rounded-3xl lg:gap-0 md:gap-0 gap-1">
+                    <div class="card  text-primary-content bg-[#FFBF0F]">
+                        <div class="card-body">
+                            <h2 class="card-title text-[#030712] text-opacity-80 text-4xl font-black ">15% OFF</h2>
+                            <p class="text-[#030712] text-opacity-80 text-xl font-semibold
+                      ">on your next purchase</p>
+                            <p class="text-[#030712] text-opacity-50 text-lg font-medium">use by January 2024</p>
+
+                        </div>
+                    </div>
+
+                    <div>
+                        <img class=" lg:visible md:visible invisible lg:h-full md:h-full h-0"
+                            src="images/cupon-devider.png" alt="">
+                    </div>
+
+                    <div class="card  text-primary-content bg-[#FFBF0F]">
+                        <div class="card-body">
+                            <h2 class="card-title text-[#030712] text-opacity-80 text-4xl font-black ">NEW15</h2>
+                            <p class="text-[#030712] text-opacity-40 text-lg font-medium">Coupon Code</p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="flex lg:flex-row md:flex-row flex-col lg:bg-[#F78C9C] rounded-3xl lg:gap-0 md:gap-0 gap-1 ">
+                    <div class="card  text-primary-content bg-[#F78C9C]">
+                        <div class="card-body">
+                            <h2 class="card-title text-[#030712] text-opacity-80 text-4xl font-black ">20% OFF</h2>
+                            <p class="text-[#030712] text-opacity-80 text-xl font-semibold
+                      ">on your next purchase</p>
+                            <p class="text-[#030712] text-opacity-50 text-lg font-medium">use by January 2024</p>
+
+                        </div>
+                    </div>
+
+                    <div class=" lg:visible md:visible invisible lg:h-full md:h-full h-0">
+                        <img src="images/cupon-devider.png" alt="">
+                    </div>
+
+                    <div class="card  text-primary-content bg-[#F78C9C]">
+                        <div class="card-body">
+                            <h2 class="card-title text-[#030712] text-opacity-80 text-4xl font-black ">Couple 20
+                            </h2>
+                            <p class="text-[#030712] text-opacity-40 text-lg font-medium">Coupon Code</p>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
 
         <!-- cupon section end -->
 
