--- a/index.html
+++ b/index.html
@@ -608,14 +608,15 @@
 
                 <div class="flex border">
 
-                    <div class="flex items-center" >
+                    <!-- <div class="lg:flex lg:items-center" >
                         <img src="images/playstore.png" alt="">
                     </div>
                     <div>
-                        <h1 class="lg:text-2xl text-[10px]" >GET IT ON</h1>
+                        <h1 class="lg:text-2xl text-[15px]" >GET IT ON</h1>
                         <h1 class="lg:text-2xl text-[15px]">Google Play</h1>
-                    </div>
+                    </div> -->
                     
+                    <img  src="images/playbutton.PNG" alt="">
 
                 </div>
 
@@ -631,12 +632,13 @@
 
                 
                 <div>
-                    <h1>@all rights reserved, P-Ticket services limited.2024</h1>
+                    <h1 class="lg:flex hidden" >@all rights reserved, P-Ticket services limited.2024</h1>
                 </div>
                 <div class=" lg:flex text-center gap-[50px]">
                     <h1>Terms & condition</h1>
                     <h1>Return & refund policy</h1>
                     <h1>Privacy policy</h1>
+                    <h1 class="lg:hidden" >@all rights reserved, P-Ticket services limited.2024</h1>
                 </div>
 
             </div>
